--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,5 +7,10 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <h2>@(Model.SQLENVVAL)</h2>
+    <ul>
+        @foreach (var t in Model.Tags)
+        {
+            <li>@(t.Key) = @(t.Value)</li>
+        }
+    </ul>
 </div>
