--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -6,3 +6,10 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<ul>
+    @foreach (var t in Model.Tags)
+    {
+        <li>@(t.Key) = @(t.Value)</li>
+    }
+</ul>
