--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <h2>Version 1X</h2>
+    <h2>Version 1A</h2>
+    <h2>@(IndexModel.Version.ToString())</h2>
     <h2>@(IndexModel.ConStr)</h2>
 
 </div>
